# conways-steinway

./: .claude.json  .gitignore  CLAUDE.md  LICENSE  README.md  TEST_CLAUDE.md  run-rust.sh  run.py
.claude/: rules.md  settings.json
.claude/scripts/: pr_status.sh
.claude/scripts/otel/: auto_start_otel.sh  config.yaml  docker-compose.yaml  prometheus.yml  setup_claude_otel.sh  start_monitoring.sh  test_integration.md
.github/: CLAUDE_SETUP.md  README.md  dependabot.yml
.github/ISSUE_TEMPLATE/: base-issue-template.md  feature-criteria.md
.github/PULL_REQUEST_TEMPLATE/: minor.md
.github/workflows/: claude-code-review.yml  claude-code.yml  claude.yml  codeql.yml
config/: .env  conways_steinway.cfg  conways_steinway.properties  conways_steinway.toml  pyproject.toml
config/__pypackages__/3.13/lib/iniconfig-2.1.0.dist-info/: RECORD
config/__pypackages__/3.13/lib/pluggy-1.6.0.dist-info/: RECORD
config/__pypackages__/3.13/lib/pygame/: pygame_icon.icns
config/__pypackages__/3.13/lib/pygame-2.6.1.dist-info/: RECORD  WHEEL
config/__pypackages__/3.13/lib/pygame/examples/data/: blue.mpg  crimson.pnm  green.pcx  turquoise.tif  yellow.tga
config/__pypackages__/3.13/lib/pygments-2.19.2.dist-info/: RECORD
config/__pypackages__/3.13/lib/pytest-8.4.1.dist-info/: RECORD
config/__pypackages__/3.13/lib/pytest_asyncio-1.0.0.dist-info/: RECORD
config/rust/: conways_steinway.cfg
config/scripts/: activate_venv.bat
go/: README.md  go.mod
go/src/: go.mod
go/src/conways-steinway/life/: go.mod  life.go
node/: README.md
python/: .env  .gitignore  README.md  __init__.py  activate_venv.bat  activate_venv.sh  config.py  config_loader.py  conways_steinway_cli.py  game_board.py  life.py  main.py  pdm.toml  piano.py  pyproject.toml  requirements.txt  setup.py  update_pip.py
python/conways_steinway.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
python/src/conways_steinway/: __init__.py  main.py
python/src/conways_steinway/audio/: piano.py
python/src/conways_steinway/config/: config.py  config_loader.py
python/src/conways_steinway/core/: game_board.py  life.py
python/tests/: README.md  __init__.py  test_audio.py  test_life.py  test_piano.py
rust/: .gitignore  Cargo.toml  README.md  main.rs  run-rust.sh
rust/audio/: audio.rs  lib.rs  piano_player.rs
rust/config/: mod.rs  types.rs
rust/crates/audio/: Cargo.toml
rust/crates/audio/src/: audio_engine.rs  lib.rs  piano_player.rs
rust/crates/audio/tests/: audio_paths_test.rs  piano_logic_test.rs
rust/crates/common/: Cargo.toml
rust/crates/common/src/: lib.rs
rust/crates/config/: Cargo.toml  loader.rs  mod.rs
rust/crates/config/src/: lib.rs  loader.rs  types.rs
rust/crates/config/tests/: board_type_test.rs  config_integration_test.rs
rust/crates/life/: Cargo.toml  README.md  README_CONFIG.md  config.rs  game_board.rs  lib.rs  mod.rs
rust/crates/life/src/: config_loader.rs  game_board.rs  lib.rs
rust/crates/life/tests/: game_logic_test.rs  game_pattern_test.rs
rust/crates/logging/: Cargo.toml  README.md  mod.rs
rust/crates/logging/src/: lib.rs
rust/crates/logging/tests/: log_level_test.rs  logging_init_test.rs
rust/life/: Cargo.toml  README_CONFIG.md  config.rs  conways_steinway.toml  game_board.rs  lib.rs
rust/life/src/: audio.rs  config_loader.rs  main.rs  piano_player.rs  unified_config.rs
rust/life/tests/: audio_path_test.rs  piano_tests.rs  piano_tests.rs.bak
rust/src/: logging.rs  main.rs
rust/src/audio/: audio_engine.rs  mod.rs  piano_player.rs
rust/src/config/: loader.rs  mod.rs  types.rs
rust/src/life/: mod.rs
rust/tests/: application_flow_test.rs
scripts/: setup_git_hooks.sh
