[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conways-steinway"
version = "0.1.0"
description = "Conway's Steinway Python Implementation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygame>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "pytest-asyncio==1.0.0",
    # Additional development tools can be added here
]

[project.scripts]
update-pip = "update_pip:update_pip"

# Future enhancements (commented out for now)
# data-analysis = [
#    "numpy>=1.25.0", 
#    "matplotlib>=3.7.0",
# ]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.virtualenv]
path = "../.venv"
download = true
always-copy = false
no-wheel = false

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
