[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "conways-steinway"
version = "0.1.0"
description = "Conway's Steinway Python Implementation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygame>=2.5.0",
    "jproperties>=2.1.0",
]

[project.scripts]
conways-steinway = "conways_steinway:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.5.0",
    "mypy>=1.8.0",
    "bandit>=1.7.5",
    "safety>=3.0.0",
]

[tool.pdm]
version = {source = "file", path = "src/conways_steinway/__init__.py"}


[tool.pdm.scripts]
start = "python conways_steinway_cli.py"
test = "pytest"
lint = "ruff check ."
format = "ruff format ."
format-check = "ruff format --check ."
typecheck = "mypy ."
security = "bandit -r src/ -s B101,B311"
safety-check = "safety check"
check-all = {composite = ["format-check", "lint", "typecheck", "security", "safety-check", "test"]}


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.pdm.resolution]
allow-prereleases = false


[tool.pdm.venv]
in_project = false
prompt = "{project_name}-{python_version}"

# Ruff configuration
[tool.ruff]
target-version = "py313"
line-length = 88
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # flake8-bandit
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "S101",  # use of assert (common in tests)
    "S311",  # random usage for game logic (not cryptographic)
    "S324",  # MD5 usage for game seeding (not cryptographic)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# Bandit configuration
[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B311"]  # Skip assert_used test and random usage for game logic

# Safety configuration
[tool.safety]
ignore = []

# MyPy configuration
[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
exclude = [
    ".venv/",
    ".pdm-build/",
    "build/",
    "dist/",
]
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = "jproperties"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pygame.*"
ignore_missing_imports = true
