[package]
name = "config"
version = "0.1.0"
edition = "2021"
description = "Configuration module for Conway's Steinway"

[dependencies]
clap = { version = "4.0", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
java-properties = "2.0.0"
log = "0.4"
life = { path = "../life" }

[dev-dependencies]
tempfile = "3.8"
